@@ -10,6 +10,13 @@ Created 11/5/1995 Heikki Tuuri
 #include "mtr0mtr.h"
 
 /************************************************************************
+Inserts a modified block into the flush list. */
+UNIV_INTERN
+void
+buf_flush_insert_into_flush_list(
+/*=============================*/
+	buf_block_t*	block);	/* in/out: block which is modified */
+/************************************************************************
 Inserts a modified block into the flush list in the right sorted position.
 This function is used by recovery, because there the modifications do not
 necessarily come in the order of lsn's. */
@@ -17,7 +24,7 @@ UNIV_INTERN
 void
 buf_flush_insert_sorted_into_flush_list(
 /*====================================*/
-	buf_page_t*	bpage);	/* in: block which is modified */
+	buf_block_t*	block);	/* in/out: block which is modified */
 
 /************************************************************************
 This function should be called at a mini-transaction commit, if a page was
@@ -49,7 +56,7 @@ buf_flush_note_modification(
 		block->page.oldest_modification = mtr->start_lsn;
 		ut_ad(block->page.oldest_modification != 0);
 
-		buf_flush_insert_into_flush_list(&block->page);
+		buf_flush_insert_into_flush_list(block);
 	} else {
 		ut_ad(block->page.oldest_modification <= mtr->start_lsn);
 	}
@@ -88,7 +95,7 @@ buf_flush_recv_note_modification(
 
 		ut_ad(block->page.oldest_modification != 0);
 
-		buf_flush_insert_sorted_into_flush_list(&block->page);
+		buf_flush_insert_sorted_into_flush_list(block);
 	} else {
 		ut_ad(block->page.oldest_modification <= start_lsn);
 	}
